--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -52,7 +52,9 @@
 * {
   box-sizing: border-box;
   border-color: var(--foreground);
-  -webkit-font-feature-settings: "liga" on, "calt" on;
+  -webkit-font-feature-settings:
+    "liga" on,
+    "calt" on;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   -ms-overflow-style: none; /* IE and Edge */
@@ -122,4 +124,17 @@ html {
 .circularLayout .action:nth-child(7) {
   transform: translate(-50%, -50%) rotate(calc(var(--angle) * 6))
     translate(var(--radius)) rotate(calc(var(--angle) * -6));
+}
+
+.rotate-0 {
+  transform: rotate(0deg);
+}
+.rotate-1 {
+  transform: rotate(90deg);
+}
+.rotate-2 {
+  transform: rotate(180deg);
+}
+.rotate-3 {
+  transform: rotate(270deg);
 }
