--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -60,7 +60,7 @@
   text-rendering: optimizeLegibility;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
-  user-select: none;
+  /* user-select: none; */
 }
 
 *::-webkit-scrollbar {
