--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -40,7 +40,7 @@
   /* Fonts */
   --font-family-special: "Covered By Your Grace", "Rock Salt", Courier,
     monospaced;
-  --font-family: Helvetica, Arial, sans-serif;
+  --font-family: monospace, Arial, sans-serif;
   --font-size: 12px;
   --font-size-large: 18px;
 
@@ -48,12 +48,18 @@
   --muted-opacity: 0.7;
   --backdrop: blur(10px);
   --outer-border: 1px solid rgba(var(--foreground-rgb), var(--muted-opacity));
+
+  --terminal-background: black;
+  --terminal-color: yellow;
+  --terminal-border: 1px dashed yellow;
 }
 
 * {
   box-sizing: border-box;
   border-color: var(--foreground);
-  -webkit-font-feature-settings: "liga" on, "calt" on;
+  -webkit-font-feature-settings:
+    "liga" on,
+    "calt" on;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   -ms-overflow-style: none; /* IE and Edge */
