feat: flow, feat: graph, feat: layout

--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -61,6 +61,8 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
   /* user-select: none; */
+  margin: 0;
+  padding: 0;
 }
 
 *::-webkit-scrollbar {
