--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -58,6 +58,7 @@
   animation: strobe 200ms steps(1, end) infinite;
 }
 
+.flash-a-little,
 .flash-a-bit {
   animation: strobe 200ms steps(1, end) 3;
 }
