--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -123,7 +123,7 @@ html {
 @supports (-webkit-text-stroke: 1px black) {
   .text-outline {
     -webkit-text-stroke: 2px black;
-    -webkit-text-fill-color: red;
+    -webkit-text-fill-color: white;
   }
 
   .text-inverted-outline {
