style: make terminal bigger

--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -90,7 +90,7 @@
 
 .split-screen {
   display: grid;
-  grid-template-columns: 500px 1fr;
+  grid-template-columns: 1fr 1fr;
   height: 100vh;
 }
 
