--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -36,6 +36,27 @@
   --backdrop: blur(10px);
   --outer-border: 1px solid rgba(var(--foreground), var(--muted-opacity));
   --terminal-border: 1px solid #666;
+
+  /* Materials */
+  --BUG: #9be97c;
+  --PISS: #e9de7c;
+  --BLOOD_LIPIDS: #ff3333;
+  --BLOOD: #ff3333;
+  --SLUDGE: #b1ab02;
+  --DIRT: #c27800;
+  --ENERGY: #00c224;
+  --PLANT: #00c224;
+  --CAFFEINATED_HEMATURIC_LIQUID: #e0bf00;
+  --CLUB_MATE: #e0bf00;
+  --DIET_RED_BULL: #00edfa;
+  --PRIME: #19fa00;
+  --M150: #f58f00;
+  --FIVE_HOUR_ENERGY: #f57200;
+  --MONSTER: #4cff42;
+  --E_LIQUID: #c2fffc;
+  --TOBACCO: #854d00;
+  --CIGARETTE_JUICE: #4a3e08;
+  --HAND_OF_GOD: #57eeff;
 }
 
 * {
@@ -51,57 +72,55 @@
 }
 
 .BUG {
-  color: #9be97c;
+  color: var(--BUG);
 }
 .PISS {
-  color: #e9de7c;
+  color: var(--PISS);
 }
 .BLOOD_LIPIDS,
 .BLOOD {
-  color: #ff3333;
+  color: var(--BLOOD);
 }
 .SLUDGE {
-  color: #b1ab02;
+  color: var(--SLUDGE);
 }
 .DIRT {
-  color: #c27800;
+  color: var(--DIRT);
 }
 .ENERGY,
 .PLANT {
-  color: #00c224;
+  color: var(--ENERGY);
 }
-.CAFFEINATED_HEMATURIC_LIQUID {
-  color: #d1c700;
-}
+.CAFFEINATED_HEMATURIC_LIQUID,
 .CLUB_MATE {
-  color: #e0bf00;
+  color: var(--CAFFEINATED_HEMATURIC_LIQUID);
 }
 .DIET_RED_BULL {
-  color: #00edfa;
+  color: var(--DIET_RED_BULL);
 }
 .PRIME {
-  color: #19fa00;
+  color: var(--PRIME);
 }
 .M150 {
-  color: #f58f00;
+  color: var(--M150);
 }
 .FIVE_HOUR_ENERGY {
-  color: #f57200;
+  color: var(--FIVE_HOUR_ENERGY);
 }
 .MONSTER {
-  color: #4cff42;
+  color: var(--MONSTER);
 }
 .E_LIQUID {
-  color: #c2fffc;
+  color: var(--E_LIQUID);
 }
 .TOBACCO {
-  color: #854d00;
+  color: var(--TOBACCO);
 }
 .CIGARETTE_JUICE {
-  color: #4a3e08;
+  color: var(--CIGARETTE_JUICE);
 }
 .HAND_OF_GOD {
-  color: #57eeff;
+  color: var(--HAND_OF_GOD);
 }
 
 *::-webkit-scrollbar {
