feat: work on pod graph

--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -61,6 +61,9 @@
   /* Transaction states */
   --STATE_ACTIVE: #fff;
   --STATE_INACTIVE: #ccc;
+
+  /* Animate.css */
+  --animate-duration: 1s;
 }
 
 * {
