feat: new progression

--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -56,7 +56,7 @@
   --E_LIQUID: #c2fffc;
   --TOBACCO: #854d00;
   --CIGARETTE_JUICE: #4a3e08;
-  --HAND_OF_GOD: #57eeff;
+  --ERASERBABY: #57eeff;
 
   /* Transaction states */
   --STATE_INACTIVE: #353535;
@@ -133,8 +133,8 @@
 .CIGARETTE_JUICE {
   color: var(--CIGARETTE_JUICE);
 }
-.HAND_OF_GOD {
-  color: var(--HAND_OF_GOD);
+.ERASERBABY {
+  color: var(--ERASERBABY);
 }
 
 *::-webkit-scrollbar {
