fix: misc ui adjustments

--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -59,7 +59,7 @@
   --MONSTER: #4cff42;
   --E_LIQUID: #c2fffc;
   --TOBACCO: #854d00;
-  --CIGARETTE_JUICE: #4a3e08;
+  --CIGARETTE_JUICE: #96801e;
   --ERASERBABY: #57eeff;
 
   /* Transaction states */
