replace google font with webfont

--- a/packages/client/src/svelte/public/fonts/index.css
+++ b/packages/client/src/svelte/public/fonts/index.css
@@ -1,8 +1,8 @@
-/* @font-face {
-    font-family: 'Fake Receipt';
-    src: url('FakeReceipt/FakeReceipt-Regular.woff2') format('woff2'),
-        url('FakeReceipt/FakeReceipt-Regular.woff') format('woff');
+@font-face {
+    font-family: 'Sixtyfour';
+    src: url('Sixtyfour/Sixtyfour-Regular.woff2') format('woff2'),
+        url('Sixtyfour/Sixtyfour-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-} */
-
+    font-display: swap;
+}
