--- a/packages/client/src/svelte/public/fonts/index.css
+++ b/packages/client/src/svelte/public/fonts/index.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Sixtyfour';
+    font-family: 'SixtyfourLocal';
     src: url('Sixtyfour/Sixtyfour-Regular.woff2') format('woff2'),
         url('Sixtyfour/Sixtyfour-Regular.woff') format('woff');
     font-weight: normal;
