--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -31,6 +31,19 @@
 
   /* Misc */
   --default-border-style: 5px double var(--color-grey-dark);
+
+  /** Layers */
+  --z-0: 0;
+  --z-1: 1;
+  --z-2: 2;
+  --z-3: 3;
+  --z-4: 4;
+  --z-5: 5;
+  --z-6: 6;
+  --z-7: 7;
+  --z-8: 8;
+  --z-9: 9;
+  --z-10: 10;
 }
 
 * {
@@ -177,7 +190,7 @@ svg {
 }
 
 .action {
-  z-index: 999900000;
+  z-index: var(--z-10);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(90deg);
@@ -228,7 +241,7 @@ pre {
   width: 100%;
   height: 100%;
   background-color: var(--foreground);
-  z-index: 100000;
+  z-index: var(--z-10);
   opacity: 0.8;
 }
 
