work on chat UI

--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -20,7 +20,7 @@
   --color-tutorial: #f6ff00;
 
   /* Sizing */
-  --default-padding: 1ch;
+  --default-padding: 14px;
   --top-bar-height: 40px;
   --tab-bar-height: 90px;
 
