--- a/packages/client/src/svelte/app.css
+++ b/packages/client/src/svelte/app.css
@@ -105,12 +105,9 @@ pre {
   animation: run 0.1s ease infinite alternate;
 }
 
+.running-3,
 .running-2 {
   animation: run 0.3s ease infinite alternate;
-}
-
-.running-3 {
-  animation: run 0.5 ease infinite alternate;
 }
 
 @keyframes run {
